--- a/package.json
+++ b/package.json
@@ -1,19 +1,22 @@
 {
   "name": "galat",
   "version": "1.0.0",
-  "description": "",
+  "description": "Galat",
   "main": "index.js",
+  "files": ["dist"],
+  "types": "./types/index.d.ts",
   "scripts": {
     "test": "jest --passWithNoTests",
     "test:watch": "jest --watch --passWithNoTests",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "build": "rimraf dist && tsc"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/ibrahimalanshor/galat.git"
   },
   "keywords": [],
-  "author": "",
+  "author": "Ibrahim Al Anshor <ibrahimalanshor6@gmail.com> (https://ibrahimalanshor.github.io)",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/ibrahimalanshor/galat/issues"
@@ -28,6 +31,7 @@
     "jest": "^29.7.0",
     "lint-staged": "^14.0.1",
     "prettier": "3.0.3",
+    "rimraf": "^5.0.5",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
