--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "name": "galat",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Galat",
   "main": "./dist/index.js",
-  "files": ["dist"],
+  "files": [
+    "dist"
+  ],
   "types": "./dist/index.d.ts",
   "scripts": {
     "test": "jest --passWithNoTests",
